Fix hints content overflow

--- a/themes/hugo-book/assets/_shortcodes.scss
+++ b/themes/hugo-book/assets/_shortcodes.scss
@@ -94,6 +94,8 @@
 
   // {{< hint >}}
   .book-hint {
+    overflow-wrap: break-word;
+    
     @each $name, $color in $hint-colors {
       &.#{$name} {
         border-color: $color;
